--- a/hungryman/package.json
+++ b/hungryman/package.json
@@ -43,6 +43,10 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^8.32.0",
+    "eslint-plugin-react": "^7.32.1",
     "sass": "^1.57.1",
     "typescript-plugin-css-modules": "^4.1.1"
   }
